# ocr-server

./: README.md  pyproject.toml
boards/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py
config/: settings.py  urls.py
ocr/: urls.py  views.py
static/script/: board-api.js  boards-api.js  log-api.js  user-api.js
static/style/: form.css  grid.css  list.css
templates/: board.html  board_form.html  board_list.html  board_update.form.html  footer.html  header.html  index.html  join_form.html  login_form.html  user_update_from.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
